# orion-ops

./: .gitignore  CHANGELOG.md  Cargo.toml  PROJECT_OVERVIEW.md  README.md  work-plan.md
.github/workflows/: build-and-test.yml  check.yml  release.yml
.mdc/: RIPER-5.mdc  RUST.mdc
.trace/: mcp.config.json
.trae/rules/: project_rules.md
_gal/: adm.gxl  work.gxl
_gal/mods/: git.gxl  rust.gxl
app/ds-cust/: args.rs  main.rs  spec.rs
app/ds-mcp/: app.rs  args.rs  conf.yml  ds_sys.rs  error.rs  logger.rs  main.rs  mcp-svc.json  mcp.json  mcp_protocol.rs  test.py
app/ds-mod/: args.rs  main.rs  spec.rs
app/ds-ops/: args.rs  main.rs  spec.rs
app/ds-sys/: args.rs  main.rs  spec.rs
app/ds-work/: main.rs  spec.rs
app/gmcp/: ds_sys.rs  error.rs  main.rs
app/gmod/: args.rs  main.rs  spec.rs
app/gops/: args.rs  main.rs  spec.rs
app/gsys/: args.rs  main.rs  spec.rs
crates/orion_common/: Cargo.toml
crates/orion_common/src/: lib.rs  serde.rs
crates/orion_common/src/cond/: cmp_pri.rs  crator.rs  display.rs  mod.rs
crates/orion_common/src/conf/: mod.rs
crates/orion_common/src/friendly/: append.rs  conv.rs  mod.rs
crates/orion_infra/: Cargo.toml
crates/orion_infra/src/: lib.rs  path.rs  traits.rs
crates/orion_infra/src/config/: conf_utils.rs  mod.rs  toml_impl.rs  traits.rs
crates/orion_infra/src/logging/: auto_log.rs  configure.rs  mod.rs
crates/orion_variate/: Cargo.toml
crates/orion_variate/src/: lib.rs  path.rs  predule.rs  saveable.rs  tools.rs  types.rs
crates/orion_variate/src/addr/: git.rs  http.rs  local.rs  types.rs
crates/orion_variate/src/vars/: collection.rs  dict.rs  origin.rs
crates/orion_variate/test/data/yml/: _values.yaml  values.yaml
crates/orion_x/: Cargo.toml
crates/orion_x/src/: lib.rs
crates/orion_x/src/addr/: types.rs
crates/orion_x/src/tpl/comment/: yml.rs
crates/orion_x/src/vars/: collection.rs  env_eval.rs  error.rs
example/: .gitignore
example/dev-mac-env/: .gitignore  ops-prj.yml  ops-systems.yml
example/dev-mac-env/_gal/: adm.gxl  work.gxl
example/dev-mac-env/values/mac-devkit/: value.yml
example/dev-mac-env/values/mac-devkit/mods/ds-mod/: _value.yml
example/dev-mac-env/values/mac-devkit/mods/gflow/: _value.yml
example/knowlege/mysql/: my.cnf
example/modules/example_mod1/arm-mac14-host/: artifact.yml  conf_spec.yml  vars.toml  vars.yml
example/modules/example_mod1/arm-mac14-host/actions/: setup.gxl
example/modules/example_mod1/host/: conf_spec.toml
example/modules/example_mod1/host/actions/: setup.gxl  update.gxl
example/modules/example_mod1/k8s/: artifact.toml  res_spec.toml
example/modules/example_mod1/k8s/actions/: setup.gxl
example/modules/example_mod1/x86-ubt22-k8s/: artifact.yml  conf_spec.yml  logs_spec.toml
example/modules/mysql/host/: artifact.toml  conf_spec.toml
example/modules/mysql/k8s/: artifact.ini  artifact.toml  conf_spec.toml
example/modules/mysql/k8s/actions/: update.gxl
example/modules/postgresql/arm-mac14-host/: artifact.yml  conf_spec.toml  vars.toml
example/modules/postgresql/host/: conf_spec.toml
example/modules/postgresql/host/confs/: example.conf
example/modules/postgresql/k8s/: artifact.toml  conf_spec.toml
example/modules/postgresql/k8s/_gal/: work.gxl
example/modules/postgresql/x86-ubt22-k8s/: artifact.yml  conf_spec.yml  logs_spec.yml  res_spec.yml  vars.yml
example/modules/warpflow/host/: artifact.toml  conf_spec.toml
example/modules/warpflow/k8s/: artifact.ini  artifact.toml
src/: README.md  accessor.rs  addr.rs  artifact.rs  conf.rs  const_vars.rs  core_files.md  deploy.rs  error.rs  infra.rs  lib.rs  local.rs  log.rs  logic.rs  mod_run.rs  modul.rs  predule.rs  project.rs  resource.rs  software.rs  spec.rs  sys_run.rs  system.rs  task.rs  tools.rs  tpl.rs  types.rs  update.rs
src/action/: act.rs  bsh.rs  gxl.rs  mod.rs  prj.rs
src/addr/: git.rs  http.rs  local.rs  mod.rs  types.rs
src/app_mod/: app.rs  example.rs  init.rs  mod.rs
src/app_mod/init_tpl/: .gitignore
src/app_sys/: README.md  mod.rs  sysproj.rs
src/artifact/: artifact.rs  core.rs  mod.rs  package.rs  types.rs
src/cust/: mod.rs  modprj.rs  sysproj.rs
src/init/actions/: setup.gxl  update.gxl
src/m_app/: example.rs  mod.rs  mod_app.rs  sysproj.rs
src/modapp/: example.rs  mod.rs  modapp.rs  sysproj.rs
src/modapp/init_tpl/_gal/: work.gxl
src/module/: README.md  depend.rs  init.rs  locaize.rs  localize.rs  metrc.rs  mod.rs  model.rs  prelude.rs  proj.rs  refs.rs  setting.rs  spec.rs  target.rs  work.rs
src/module/init/: .gitignore
src/module/init/_gal/: adm.gxl  work.gxl
src/module/init/host/_gal/: work.gxl
src/module/init/host/actions/: setup.gxl
src/module/init/host/workflows/: operators.gxl  setup.gxl  setup.sh  uninstall.gxl  update.gxl
src/module/init/k8s/_gal/: work.gxl
src/module/setting/: export.rs  localize.rs  mod.rs  path.rs  templatize.rs
src/ops_prj/: README.md  conf.rs  import.rs  init.rs  mod.rs  proj.rs  system.rs
src/ops_prj/init/: .gitignore
src/ops_prj/init/_gal/: adm.gxl  work.gxl
src/package/: README.md  archive.rs  import.rs  mod.rs  types.rs
src/service/: README.md
src/storage/: README.md
src/system/: README.md  conf.rs  init.rs  local.rs  mod.rs  path.rs  proj.rs  refs.rs  spec.rs  work.rs
src/system/init/: .gitignore
src/system/init/_gal/: adm.gxl  work.gxl
src/system/init/actions/: setup.gxl
src/system/init/workflows/: operators.gxl  setup.gxl  update.gxl
src/tpl/: covert.rs  define.rs  error.rs  export.rs  gtmpl.rs  handlebars.rs  mod.rs
src/tpl/comment/: mod.rs  rust.rs  yml.rs
src/vars/: collection.rs  definition.rs  dict.rs  env_eval.rs  global.rs  mod.rs  origin.rs  types.rs
src/workflow/: README.md  act.rs  gxl.rs  prj.rs
src/workins/: mod.rs  proj.rs
src/workins/init/: .gitignore
src/workins/init/_gal/: adm.gxl
src/workins/init/workflows/: setup.gxl
test/helm/nginx/: values.yaml
test/helm/tpls/: simple.json  simple.tpl
test_data/helm/: value.json
test_data/helm/nginx/: values.yaml
test_data/helm/tpls/: test1.yml
tests/: sys_test.rs
(+5 files in other folders)
