[package]
name = "orion-syspec"
version = "0.6.2"
edition = "2024"

[[bin]]
name = "ds-sys"
path = "app/ds-sys/main.rs"

[[bin]]
name = "ds-mod"
path = "app/ds-mod/main.rs"



[workspace]
members = [
    ".",
    "crates/orion_common",
    "crates/orion_infra"
]

[workspace.package]
name = "orion-syspec"
version = "0.4.1"
edition = "2024"
license = "Apache-2.0"

[dependencies]
orion_common = { path = "crates/orion_common" }
orion_infra = { path = "crates/orion_infra" }

glob = "0.3"
orion-error = "0.3"
#orion-error = { path = "../orion-error/" }

anyhow = "~1.0"
comfy-table = "~7.1"
contracts = "~0.6"
env_logger = "~0.11"
reqwest = { version = "~0.12", features = ["multipart"] }
async-trait = "0.1"
log = "~0.4"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
serde_yaml = "0.9"
serde_ini = "0.2.0"
strfmt = "~0.2"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
thiserror = "~2.0"
toml = "~0.8"
walkdir = "~2.5"
delegate = "0.13.3"
wildmatch = "~2.4"
lazy_static = "~1.5"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
home = "0.5"
gtmpl = "0.7.1"
once_cell = "1.19"

handlebars = "6.3"
fs_extra = "1.3"
regex = "1.10"
derive-getters = "0.5.0"
git2 = "0.20"
indicatif = "0.17"
scopeguard = "1.2.0"
derive_more = { version = "2.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"

[dev-dependencies]
mockall = "~0.13"
httpmock = "0.7.0"
criterion = "~0.6"
tempfile = "3.3"
