[package]
name = "galaxy-ops"
version = "0.11.0"
edition = "2024"

[[bin]]
name = "gsys"
path = "app/gsys/main.rs"

[[bin]]
name = "gmod"
path = "app/gmod/main.rs"

[[bin]]
name = "gops"
path = "app/gops/main.rs"

#[[bin]]
#name = "gmcp"
#path = "app/gmcp/main.rs"

[workspace]
members = ["."]

[workspace.package]
#name = "galaxy-ops"
version = "0.4.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
orion_common = { git = "https://github.com/galaxy-sec/orion-common.git", branch = "main" }
orion_infra = { git = "https://github.com/galaxy-sec/orion-infra", branch = "main" }
orion_variate = { git = "https://github.com/galaxy-sec/orion-variate", tag = "v0.6.2" }
#orion_variate = { path = "../orion_variate" }
thiserror = "~2.0"
log = "~0.4"
git2 = "0.20"
home = "0.5"
toml = "~0.9"
serde = "~1.0"
winnow = "~0.6"
derive_more = { version = "2.0", features = ["full"] }
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "~0.12", features = ["multipart"] }
url = "2.5"
os_info = "3"
inquire = "~0.7"
serde_derive = "~1.0"
anyhow = "~1.0"
serde_json = "~1.0"
fs_extra = "1.3"
indexmap = { version = "2.10", features = ["serde"] }
serde_yaml = "0.9"
serde_ini = "0.2.0"
derive-getters = "0.5.0"
indicatif = "0.18"
contracts = "~0.6"
tar = "0.4"
flate2 = "~1.1"
tracing = "0.1"
orion-error = "0.3"
getset = "0.1.6"
handlebars = "6.3"
async-trait = "0.1"
env_logger = "~0.11"
scopeguard = "1.2.0"
# env_logger = "~0.11"
flexi_logger = "~0.31"
clap = { version = "4.5", features = ["derive"] }

#console = "~0.15"

[dependencies]

orion_common = { workspace = true }
orion_infra = { workspace = true }
orion_variate = { workspace = true }

glob = "0.3"
orion-error = { workspace = true }

anyhow = { workspace = true }
comfy-table = "~7.1"
contracts = { workspace = true }
env_logger = "~0.11"
reqwest = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_ini = { workspace = true }
strfmt = "~0.2"
tokio = { workspace = true }
tracing = "0.1"
thiserror = { workspace = true }
os_info = "3"
toml = { workspace = true }
walkdir = "~2.5"
delegate = "0.13.3"
wildmatch = "~2.4"
lazy_static = "~1.5"
futures = "0.3"
clap = { workspace = true }
url = "2.5"
home = "0.5"
gtmpl = "0.7.1"
once_cell = "1.19"
handlebars = "6.3"
fs_extra = "1.3"
regex = "1.10"
derive-getters = { workspace = true }
git2 = "0.20"
indicatif = { workspace = true }
scopeguard = "1.2.0"
winnow = { workspace = true }
derive_more = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
indexmap = { workspace = true }
getset = "0.1.6"

#actix-cors = "~0.7"
#tracing-actix-web = "0.7.18"
#tracing-appender = "0.2"
chrono = "0.4"
#rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
#    "server",
#    "transport-sse-server",
#    "transport-io",
#    "transport-streamable-http-server",
#    "auth",
#] }
#tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "time",
] }
flate2.workspace = true
tar.workspace = true
inquire.workspace = true
#validator = { version = "~0.20", features = ["derive"] }
#axum = "~0.8"

[dev-dependencies]
mockall = "~0.13"
httpmock = "0.7.0"
criterion = "~0.6"
tempfile = "3.3"
