[package]
name = "orion_common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# thiserror = "~2.0"
derive-getters = "~0.5"
wildmatch = "~2.4"
ipnet = "~2.11"
anyhow = "~1.0"
serde = "~1.0"
toml = "~0.8"
# tempfile = "3.3.0"
chrono = { version = "~0.4", features = ["serde"] }
