[package]
name = "orion_common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# thiserror = "~2.0"
orion-error = { workspace =true }
derive_more = { workspace =true }
derive-getters = "~0.5"
wildmatch = "~2.4"
ipnet = "~2.11"
anyhow = "~1.0"
toml = "~0.8"
serde = "~1.0"
serde_yaml = "0.9"
serde_ini = "0.2.0"
serde_json = "~1.0"
thiserror = "~2.0"
serde_derive = "~1.0"
# tempfile = "3.3.0"
chrono = { version = "~0.4", features = ["serde"] }
