[package]
name = "orion_infra"
authors = ["wukong<sec-wukong@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
thiserror = "~2.0"
log = "~0.4"
toml = "~0.8"
serde = "~1.0"
serde_derive = "~1.0"
anyhow = "~1.0"
# env_logger = "~0.11"
flexi_logger = "~0.29"
#console = "~0.15"
[dev-dependencies]
rstest = "0.25"
tempfile = "3.4"